--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-autosuggest": "9.4.2",
     "react-dates": "^18.1.1",
     "react-dom": "16.5.2",
+    "react-input-range": "^1.3.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-with-direction": "^1.3.0",
