--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.22.2",
     "node-sass": "4.9.3",
     "react": "16.5.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "9.4.2",
     "react-dates": "^18.1.1",
     "react-dom": "16.5.2",
