--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "graphql-tag": "2.10.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.4",
-    "moment": "^2.22.2",
+    "moment": "2.22.2",
     "node-sass": "4.9.3",
     "react": "16.5.2",
-    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-apollo": "2.2.4",
     "react-autosuggest": "9.4.2",
-    "react-dates": "^18.1.1",
+    "react-dates": "18.1.1",
     "react-dom": "16.5.2",
-    "react-input-range": "^1.3.0",
+    "react-input-range": "1.3.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
-    "react-with-direction": "^1.3.0",
+    "react-with-direction": "1.3.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
