--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev-server": "webpack-dev-server --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "4.16.4"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "7.1.2",
     "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "apollo-boost": "0.1.16",
@@ -26,6 +28,7 @@
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^24.1.0",
     "mini-css-extract-plugin": "0.4.4",
     "moment": "2.22.2",
     "node-sass": "4.9.3",
@@ -40,9 +43,11 @@
     "react-router-dom": "4.3.1",
     "react-with-direction": "1.3.0",
     "redux": "4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "unfetch": "^4.0.1",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.9"
