--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-loader": "8.0.4",
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "html-webpack-plugin": "3.2.0",
