--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mini-css-extract-plugin": "0.4.4",
     "moment": "2.22.2",
     "node-sass": "4.9.3",
+    "normalize.css": "^8.0.1",
     "react": "16.5.2",
     "react-addons-css-transition-group": "15.6.2",
     "react-apollo": "2.2.4",
