--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "unfetch": "^4.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.9"
