--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "7.0.0",
     "apollo-boost": "0.1.16",
     "babel-loader": "8.0.4",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
     "enzyme": "^3.9.0",
