--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "16.5.2",
     "react-input-range": "1.3.0",
     "react-redux": "5.0.7",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
     "react-with-direction": "1.3.0",
     "redux": "4.0.1",
