--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "8.0.4",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "1.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
