--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "1.0.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "html-webpack-plugin": "3.2.0",
