--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "2.22.2",
     "node-sass": "4.9.3",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "16.5.2",
     "react-addons-css-transition-group": "15.6.2",
     "react-apollo": "2.2.4",
