--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "enzyme-to-json": "^3.3.5",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
+    "halogenium": "^2.2.3",
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "0.4.4",
