--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dates": "18.1.1",
     "react-dom": "16.5.2",
     "react-input-range": "1.3.0",
+    "react-modal": "^3.9.1",
     "react-on-screen": "^2.1.1",
     "react-redux": "5.0.7",
     "react-responsive": "^6.1.1",
