--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "^5.0.2",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "1.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
