--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tag": "2.10.0",
     "halogenium": "^2.2.3",
     "html-webpack-plugin": "3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "0.4.4",
     "moment": "2.22.2",
