--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "apollo-boost": "0.1.16",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "8.0.4",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "0.1.19",
@@ -44,6 +45,7 @@
     "moment": "2.22.2",
     "node-sass": "4.9.3",
     "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-addons-css-transition-group": "15.6.2",
